# AgeDetection

./: CMakeLists.txt  GitHubUploader  age_detection.js  age_detection.php  age_estimator.cpp  layout.txt  style_age.css
